--- a/index.html
+++ b/index.html
@@ -7,20 +7,95 @@
   </head>
 
   <body>
+    <main id="main-doc">
+      <nav id="navbar">
+        <header>JS Documentation</header>
+        <a href="#some_link" class="nav-link">JS Documentation</a>
+      </nav>
+      <section class="main-section">
+        <header id="Introduction">
+          Introduction
+          <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
+        </header>
+        <a href="#Introduction" class="nav-link">Introduction</a>
+      </section>
+      <section class="main-section">
+        <header id="What_you_should_already_know">
+          What you should already know
+          <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
+        </header>
+        <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+      </section>
+      <section class="main-section">
+        <header id="JavaScript_and_Java">
+          JavaScript and Java
+          <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
+        </header>
+        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+      </section>
+      <section class="main-section">
+        <header id="Hello_world">
+          Hello world
+          <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
+        </header>
+        <a href="#Hello_world" class="nav-link">Hello world</a>
+      </section>
+      <section class="main-section">
+        <header id="Variables">
+          Variables
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+          <code>x = 6 + 9</code>
+          <li>One</li>
+        </header>
+        <a href="#Variables" class="nav-link">Variables</a>
+      </section>
+      <section class="main-section">
+        <header id="Declaring_variables">
+          Declaring variables
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+          <code>x = 6 + 9</code>
+          <li>Two</li>
+        </header>
+        <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
+      </section>
+      <section class="main-section">
+        <header id="Variable_scope">
+          Variable scope
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+          <code>x = 6 + 9</code>
+          <li>Three</li>
+        </header>
+        <a href="#Variable_scope" class="nav-link">Variable scope</a>
+      </section>
+      <section class="main-section">
+        <header id="Global_variables">
+          Global variables
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+          <code>x = 6 + 9</code>
+          <li>Four</li>
+        </header>
+        <a href="#Global_variables" class="nav-link">Global variables</a>
+      </section>
+      <section class="main-section">
+        <header id="Constants">
+          Constants
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+          <code>x = 6 + 9</code>
+          <li>Five</li>
+        </header>
+        <a href="#Constants" class="nav-link">Constants</a>
+      </section>
+      <section class="main-section">
+        <header id="Data_types">
+          Data types
+          <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
+        </header>
+        <a href="#Data_types" class="nav-link">Data types</a>
+      </section>
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    Hello World, we are software developers!
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    
+    
     <script  src="js/index.js"></script>
   </body>
 </html>
